# grams-tof

./: .gitignore  CMakeLists.txt
Analysis/: CMakeLists.txt
Analysis/include/: TOF_ChannelConversion.h  TOF_CoincidenceChannelInfo.h  TOF_CoincidenceEvents.h  TOF_Constants.h  TOF_ConvertStg1toStg2.h  TOF_Fitting.h  TOF_Linkdef.h  TOF_PaddleChannelMap.h  TOF_ParameterScan.h  TOF_TdcQdcCalibration.h  TOF_TreeDataStg1.h  TOF_TreeDataStg2.h
Analysis/macro/: tofCoinEvt_20251121_KS.C  tofCoinEvt_20260112.C
Analysis/scripts_c/: CMakeLists.txt
Analysis/scripts_c/include/: groundTest_pulse_sync.h  process_convertStg1ToStg2.h  process_darkCount.h  process_discSetting.h  process_tofCoinEvt.h  process_tofCoinEvtQA.h  process_tofQA_iridium.h
Analysis/scripts_c/src/: groundTest_pulse_sync_impl.cpp  process_convertStg1ToStg2_impl.cpp  process_darkCount_impl.cpp  process_discSetting_impl.cpp  process_tofCoinEvtQA_impl.cpp  process_tofCoinEvt_impl.cpp  process_tofQA_iridium_impl.cpp
Analysis/scripts_c/tools/: groundTest_pulse_sync.cpp  process_convertStg1ToStg2.cpp  process_darkCount.cpp  process_discSetting.cpp  process_tofCoinEvt.cpp  process_tofCoinEvtQA.cpp  process_tofQA_iridium.cpp  tofCoinEvt_20260125_verKS.C
Analysis/src/: TOF_Attributes.cpp  TOF_ChannelConversion.cpp  TOF_CoincidenceEvents.cpp  TOF_ConvertStg1toStg2.cpp  TOF_DiscriminatorCalibation.cpp  TOF_PaddleChannelMap.cpp  TOF_ParameterScan.cpp  TOF_TdcQdcCalibration.cpp  TOF_TreeDataStg1.cpp  TOF_TreeDataStg2.cpp
FlightOps/: CMakeLists.txt
FlightOps/include/: GRAMS_TOF_Analyzer.h  GRAMS_TOF_CommandClient.h  GRAMS_TOF_CommandCodec.h  GRAMS_TOF_CommandDefs.h  GRAMS_TOF_CommandDispatch.h  GRAMS_TOF_Config.h  GRAMS_TOF_DAQController.h  GRAMS_TOF_EventClient.h  GRAMS_TOF_EventServer.h  GRAMS_TOF_MonitorCodec.h  GRAMS_TOF_PythonIntegration.h  GRAMS_TOF_RootConverter.h
FlightOps/src/: GRAMS_TOF_Analyzer.cpp  GRAMS_TOF_CommandClient.cpp  GRAMS_TOF_CommandCodec.cpp  GRAMS_TOF_CommandDispatch.cpp  GRAMS_TOF_Config.cpp  GRAMS_TOF_DAQController.cpp  GRAMS_TOF_EventClient.cpp  GRAMS_TOF_EventServer.cpp  GRAMS_TOF_MonitorCodec.cpp  GRAMS_TOF_PythonIntegration.cpp  GRAMS_TOF_RootConverter.cpp
FlightOps/tools/: grams_tof_client_daq.cpp  test_grams_tof_root.cpp
GroundOps/: CMakeLists.txt
GroundOps/config/: bridge_config.json
GroundOps/env/: grams_tof_ground_env.sh
GroundOps/grafana/: TOF_metric-1772838555610.json
GroundOps/log/: log
GroundOps/scripts/: setup_db.py  tof_bridge.py
GroundOps/sql/: create_tof_monitor.sql
GroundOps/systemd/: tof-bridge.service
